--- a/areas/cpumap.org
+++ b/areas/cpumap.org
@@ -124,7 +124,21 @@ the customers/services grouping is maintained and hit the same CPU+MQ TXq.
 CLOSED: [2019-02-06 Wed]
 https://github.com/netoptimizer/network-testing/blob/master/tc/tc_mq_htb_setup.sh
 
-** NEXT cpumap: Test cpumap redirect works with MQ-HTB silo setup
+** DONE cpumap: Test cpumap redirect works with MQ-HTB silo setup
+CLOSED: [2019-03-04 Mon 15:45]
+:LOGBOOK:
+- State "DONE"       from "NEXT"       [2019-03-04 Mon 15:45]
+:END:
+
+Yes, MQ-HTB silo setup (example [[https://github.com/netoptimizer/network-testing/blob/master/tc/tc_mq_htb_setup.sh][tc_mq_htb_setup.sh]]) it works.
+
+BUT watch-out, as XPS (Transmit Packet Steering) will take precedence over
+any changes to =skb->queue_mapping=.  You need to disable XDP via mask=00 in
+files =/sys/class/net/DEV/queues/tx-*/xps_cpus= .
+
+To help people out, here is a script for easier setup of XPS:
+[[https://github.com/netoptimizer/network-testing/blob/master/tc/xps_setup.sh][xps_setup.sh]]
+Run the script with --help.
 
 ** DONE Allow BPF clsact write access to skb->queue_mapping
 CLOSED: [2019-02-19 Tue]
