Planning git repo xdp-cpumap-tc
Want to create a github repo that demonstrate how to
use XDP and TC to solve the top-level todo:
 * Use-case cpumap: Solving qdisc TX lock congestion for BW shaping

I actually have working code, but it requires some documention
before people can actually use it.  Keeping it in a private-repo
until it is more consumable.

Signed-off-by: Jesper Dangaard Brouer <brouer@redhat.com>

--- a/areas/cpumap.org
+++ b/areas/cpumap.org
@@ -255,6 +255,15 @@ The biggest surprise for users is likely that XPS will overwrite their
 choice (and XPS seems to be default enabled). Users must first disable XPS
 via mask=00, before their changes via =skbedit= takes any effect.
 
+** DONE cpumap: create git project xdp-cpumap-tc
+CLOSED: [2019-02-13 Wed]
+
+Create git project xdp-cpumap-tc, that demonstrate how XDP cpumap redirect
+can be used together with Linux TC (Traffic Control) for solving the Qdisc
+locking problem.
+
+** TODO xdp-cpumap-tc: add some documentation
+** TODO xdp-cpumap-tc: public release of code/repo
 ** TODO cpumap: quantify effect of cpumap (currently) don't transfer RX-csum info
 
 Verify csum is recalculated on IP-forward TX path for cpumap redirected
