NetDevConf: Mention 4.20 is preferred kernel version
Signed-off-by: Jesper Dangaard Brouer <brouer@redhat.com>

--- a/conference/NetDevConf2019-0x13/tutorial-presentation.org
+++ b/conference/NetDevConf2019-0x13/tutorial-presentation.org
@@ -145,6 +145,8 @@ The =testenv= directory contains a helper script to setup a test environment.
 
 - Uses network namespaces and virtual network devices to simulate a real setup
 - Requires kernel version *4.19 or higher*
+  * Due to =veth= driver getting native-XDP support (incl. fixes)
+  * Preferred kernel is *4.20* as =veth= got ethtool statistics
 - See README in the testenv directory for instructions
 - Easy alias: =eval $(./testenv alias)=, then =t setup=
 
