--- a/areas/xdp-tutorial.org
+++ b/areas/xdp-tutorial.org
@@ -9,15 +9,17 @@
 ** TODO xdp-tutorial: Add AF_XDP tutorial example
 Initial step PR: https://github.com/xdp-project/xdp-tutorial/pull/35
 
+* TODO xdp-tutorial for tracepoints project
+
+Tutorial sub-project for teaching people about using tracepoints.
+
+The XDP angle is that infra depend on some tracepoints for stats, debugging
+and troubleshooting XDP. E.g. see the kernel/samples/bpf program xdp_monitor
+([[https://github.com/torvalds/linux/blob/master/samples/bpf/xdp_monitor_kern.c][xdp_monitor_kern.c]] and [[https://github.com/torvalds/linux/blob/master/samples/bpf/xdp_monitor_user.c][xdp_monitor_user.c]]). But the issue is that
+xdp_monitor (and other trace samples) use another ELF loader than libbpf
+(the samples local [[https://github.com/torvalds/linux/blob/master/samples/bpf/bpf_load.c][bpf_load.c]]), which we want to move people way from.
+
 ** TODO xdp-tutorial: add tracepoint examples for reading XDP tracepoints
-
-The XDP infra depend on some tracepoints for stats, debugging and
-troubleshooting XDP. E.g. see the kernel/samples/bpf program xdp_monitor
-([[https://github.com/torvalds/linux/blob/master/samples/bpf/xdp_monitor_kern.c][xdp_monitor_kern.c]] and [[https://github.com/torvalds/linux/blob/master/samples/bpf/xdp_monitor_user.c][xdp_monitor_user.c]]).
-
-But the issue is that xdp_monitor (and other trace samples) use another ELF
-loader than libbpf (the samples local [[https://github.com/torvalds/linux/blob/master/samples/bpf/bpf_load.c][bpf_load.c]]), which we want to move
-people way from.
 
 Tutorial already covers load BPF programs, but attaching to tracepoints need
 to be covered by tutorial. Attaching to tracepoints is a multi-step process,
@@ -32,6 +34,7 @@ consider upstreaming to libbpf are placed in [[https://github.com/xdp-project/xd
 
 Another consideration: We should promote using raw_tracepoints for BPF as it
 have much less overhead for getting info that BPF need.
+
 
 * TODO XDP-tutorial diverse assignments
 
