TODO xdp-tutorial: selftests project
Toke and I discussed creating selftest for XDP-tutorial.
Create a TODO, we can fillout details later.

Signed-off-by: Jesper Dangaard Brouer <brouer@redhat.com>

--- a/areas/xdp-tutorial.org
+++ b/areas/xdp-tutorial.org
@@ -54,6 +54,10 @@ how to use perf record + script with tracepoint event =xdp:xdp_exception=.
 And basic04 program have a "xdp_abort" section program, that can trigger
 this tracepoint.
 
+* TODO xdp-tutorial: selftests project
+
+We would like to have a system that (integrated with Makefile) that can run
+a selftest per assignment directory.
 
 * TODO XDP-tutorial diverse assignments
 
