--- a/conference.org
+++ b/conference.org
@@ -30,7 +30,11 @@ CLOSED: [2019-02-02 Sat]
 Link to talk:
 [[https://fosdem.org/2019/schedule/event/xdp_overview_and_update/][XDP (eXpress Data Path) as a building block for other FOSS projects]]
 
-* TODO XDP tutorial at Netdev 0x13
+* DONE XDP tutorial at Netdev 0x13
+CLOSED: [2019-04-09 Tue 13:16]
+:LOGBOOK:
+- State "DONE"       from "TODO"       [2019-04-09 Tue 13:16]
+:END:
 
 XDP is an increasingly popular topic and technology.
 XDP builds on top of eBPF.
@@ -85,7 +89,11 @@ Started repo here: https://github.com/xdp-project/xdp-tutorial/
 
 Related: How do we ensure participants can successfully run XDP at the event?
 
-** NEXT Needs document of best practices
+** DONE Needs document of best practices
+CLOSED: [2019-04-09 Tue 13:15]
+:LOGBOOK:
+- State "DONE"       from "NEXT"       [2019-04-09 Tue 13:15]
+:END:
 E.g.:
 
 - Use metadata field for carrying per-packet data
